syntax = "proto3";

package encryption;

// Specify the Go package for generated files
option go_package = "./proto;proto";

service EncryptionService {
  rpc Encrypt (EncryptRequest) returns (EncryptResponse);
  rpc Decrypt (DecryptRequest) returns (DecryptResponse);
}

message EncryptRequest {
  repeated string plaintexts = 1; // Array of plaintexts
  string request_id = 2;  // New field for request ID
}

message EncryptResponse {
  repeated string encrypted_texts = 1; // Array of encrypted texts
}

message DecryptRequest {
  repeated string encrypted_texts = 1; // Array of encrypted texts
  string request_id = 2;  // New field for request ID
}

message DecryptResponse {
  repeated string plaintexts = 1; // Array of decrypted plaintexts
}
